--- a/magrathea.ui
+++ b/magrathea.ui
@@ -510,20 +510,13 @@
         <widget class="QWidget" name="gridLayoutWidget">
          <property name="geometry">
           <rect>
-           <x>30</x>
-           <y>10</y>
+           <x>10</x>
+           <y>20</y>
            <width>521</width>
            <height>163</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="4" column="4">
-           <widget class="QPushButton" name="destroy_Button">
-            <property name="text">
-             <string>destroy!!</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="4">
            <widget class="QPushButton" name="std_dev_button">
             <property name="text">
@@ -637,10 +630,47 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="5">
+          <item row="5" column="5">
+           <widget class="QPushButton" name="destroy_Button">
+            <property name="text">
+             <string>destroy!!</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="4">
            <widget class="QPushButton" name="VignetteButton">
             <property name="text">
              <string>Vignette</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="5">
+           <widget class="QSpinBox" name="ColorBox">
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <property name="minimum">
+             <number>-1</number>
+            </property>
+            <property name="maximum">
+             <number>2</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="5">
+           <widget class="QPushButton" name="DelLogButton">
+            <property name="text">
+             <string>Del Log</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="4">
+           <widget class="QCheckBox" name="LaplacianBox">
+            <property name="text">
+             <string>Laplacian</string>
             </property>
            </widget>
           </item>
