--- a/magrathea.ui
+++ b/magrathea.ui
@@ -593,9 +593,9 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QPushButton" name="Fiducial_finder_button_2">
+           <widget class="QPushButton" name="Fiducial_finder_button">
             <property name="text">
-             <string>Fid Finder 2</string>
+             <string>Fid Finder</string>
             </property>
            </widget>
           </item>
@@ -610,13 +610,6 @@
            <widget class="QPushButton" name="Calib_button_2">
             <property name="text">
              <string>Calibrate um/px</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="Fiducial_finder_button_1">
-            <property name="text">
-             <string>Fid finder 1</string>
             </property>
            </widget>
           </item>
