--- a/magrathea.ui
+++ b/magrathea.ui
@@ -702,6 +702,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="F_fid_gen_button">
+            <property name="text">
+             <string>F fid gen</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </widget>
