--- a/magrathea.ui
+++ b/magrathea.ui
@@ -512,11 +512,114 @@
           <rect>
            <x>10</x>
            <y>0</y>
-           <width>588</width>
-           <height>169</height>
+           <width>553</width>
+           <height>198</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
+          <item row="0" column="1">
+           <widget class="QPushButton" name="Calib_button_2">
+            <property name="text">
+             <string>Calibrate um/px</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="4">
+           <widget class="QPushButton" name="color_button">
+            <property name="text">
+             <string>color</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="5">
+           <widget class="QPushButton" name="DelLogButton">
+            <property name="text">
+             <string>Del Log</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="4">
+           <widget class="QCheckBox" name="LaplacianBox">
+            <property name="text">
+             <string>Laplacian</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QCheckBox" name="calib_from_file_Box">
+            <property name="text">
+             <string>Calibration from file</string>
+            </property>
+            <property name="checked">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="3">
+           <widget class="QSpinBox" name="spinBox_input">
+            <property name="maximum">
+             <number>99999</number>
+            </property>
+            <property name="value">
+             <number>0</number>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="3">
+           <widget class="QSpinBox" name="algorithm_box">
+            <property name="minimum">
+             <number>0</number>
+            </property>
+            <property name="maximum">
+             <number>5</number>
+            </property>
+            <property name="value">
+             <number>0</number>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Image</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Fiducial</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="2">
+           <widget class="QLabel" name="label_18">
+            <property name="text">
+             <string>Algorithm</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QPushButton" name="ArucoButton">
+            <property name="text">
+             <string>Aruco button</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QSpinBox" name="ArucospinBox">
+            <property name="maximum">
+             <number>999999</number>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="F_fid_gen_button">
+            <property name="text">
+             <string>F fid gen</string>
+            </property>
+           </widget>
+          </item>
           <item row="5" column="2">
            <widget class="QPushButton" name="f_loop_button">
             <property name="text">
@@ -606,106 +709,38 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="QPushButton" name="Calib_button_2">
+          <item row="6" column="0">
+           <widget class="QPushButton" name="cap_and_move_button">
             <property name="text">
-             <string>Calibrate um/px</string>
+             <string>Capture and move</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="4">
-           <widget class="QPushButton" name="color_button">
-            <property name="text">
-             <string>color</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="5">
-           <widget class="QPushButton" name="DelLogButton">
-            <property name="text">
-             <string>Del Log</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="4">
-           <widget class="QCheckBox" name="LaplacianBox">
-            <property name="text">
-             <string>Laplacian</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="QCheckBox" name="calib_from_file_Box">
-            <property name="text">
-             <string>Calibration from file</string>
-            </property>
-            <property name="checked">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="3">
-           <widget class="QSpinBox" name="spinBox_input">
+          <item row="6" column="2">
+           <widget class="QDoubleSpinBox" name="x_fid_move_SpinBox">
             <property name="maximum">
-             <number>99999</number>
-            </property>
-            <property name="value">
-             <number>0</number>
+             <double>1.990000000000000</double>
             </property>
            </widget>
           </item>
-          <item row="4" column="3">
-           <widget class="QSpinBox" name="algorithm_box">
-            <property name="minimum">
-             <number>0</number>
-            </property>
+          <item row="6" column="4">
+           <widget class="QDoubleSpinBox" name="y_fid_move_SpinBox">
             <property name="maximum">
-             <number>5</number>
-            </property>
-            <property name="value">
-             <number>2</number>
+             <double>1.990000000000000</double>
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
-           <widget class="QLabel" name="label_6">
+          <item row="6" column="1">
+           <widget class="QLabel" name="label_19">
             <property name="text">
-             <string>Image</string>
+             <string>X move [mm]</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="2">
-           <widget class="QLabel" name="label_7">
+          <item row="6" column="3">
+           <widget class="QLabel" name="label_20">
             <property name="text">
-             <string>Fiducial</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="2">
-           <widget class="QLabel" name="label_18">
-            <property name="text">
-             <string>Algorithm</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0">
-           <widget class="QPushButton" name="ArucoButton">
-            <property name="text">
-             <string>Aruco button</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="1">
-           <widget class="QSpinBox" name="ArucospinBox">
-            <property name="maximum">
-             <number>999999</number>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QPushButton" name="F_fid_gen_button">
-            <property name="text">
-             <string>F fid gen</string>
+             <string>Y move [mm]</string>
             </property>
            </widget>
           </item>
