--- a/magrathea.ui
+++ b/magrathea.ui
@@ -759,6 +759,20 @@
             </property>
            </widget>
           </item>
+          <item row="4" column="6">
+           <widget class="QSpinBox" name="filter_spinBox">
+            <property name="maximum">
+             <number>200</number>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="5">
+           <widget class="QLabel" name="label_22">
+            <property name="text">
+             <string>filter size</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </widget>
