--- a/magrathea.ui
+++ b/magrathea.ui
@@ -1756,6 +1756,9 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="alignment">
+               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+              </property>
               <property name="readOnly">
                <bool>true</bool>
               </property>
