--- a/magrathea.ui
+++ b/magrathea.ui
@@ -105,7 +105,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="joystickTab">
         <attribute name="title">
@@ -772,6 +772,71 @@
              <string>Focus algo test</string>
             </property>
            </widget>
+          </item>
+         </layout>
+        </widget>
+       </widget>
+       <widget class="QWidget" name="tab_2">
+        <attribute name="title">
+         <string>Calibration plate</string>
+        </attribute>
+        <widget class="QWidget" name="gridLayoutWidget_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>10</y>
+           <width>561</width>
+           <height>161</height>
+          </rect>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_6">
+          <item row="0" column="1">
+           <widget class="QDoubleSpinBox" name="point1_x_box"/>
+          </item>
+          <item row="0" column="2">
+           <widget class="QDoubleSpinBox" name="point1_y_box"/>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_23">
+            <property name="text">
+             <string>Point 1</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_24">
+            <property name="text">
+             <string>Point 2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_25">
+            <property name="text">
+             <string>Point 3</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QDoubleSpinBox" name="point2_x_box"/>
+          </item>
+          <item row="1" column="2">
+           <widget class="QDoubleSpinBox" name="point2_y_box"/>
+          </item>
+          <item row="1" column="3">
+           <widget class="QDoubleSpinBox" name="point2_z_box"/>
+          </item>
+          <item row="2" column="1">
+           <widget class="QDoubleSpinBox" name="point3_x_box"/>
+          </item>
+          <item row="2" column="2">
+           <widget class="QDoubleSpinBox" name="point3_y_box"/>
+          </item>
+          <item row="2" column="3">
+           <widget class="QDoubleSpinBox" name="point3_z_box"/>
+          </item>
+          <item row="0" column="3">
+           <widget class="QDoubleSpinBox" name="point1_z_box"/>
           </item>
          </layout>
         </widget>
