--- a/magrathea.ui
+++ b/magrathea.ui
@@ -783,6 +783,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="Circles_button">
+            <property name="text">
+             <string>Circles finder</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </widget>
