--- a/magrathea.ui
+++ b/magrathea.ui
@@ -36,6 +36,16 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
+       <widget class="QUndoView" name="undoView">
+        <property name="geometry">
+         <rect>
+          <x>630</x>
+          <y>400</y>
+          <width>256</width>
+          <height>192</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
      </item>
      <item>
@@ -112,7 +122,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>3</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="joystickTab">
         <attribute name="title">
@@ -797,6 +807,13 @@
            <widget class="QLabel" name="label_26">
             <property name="text">
              <string>Plate position</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="6">
+           <widget class="QPushButton" name="FitTestButton">
+            <property name="text">
+             <string>Fit test</string>
             </property>
            </widget>
           </item>
